Opened 13 years ago

Closed 11 years ago

Last modified 11 years ago

#2687 closed defect (fixed)

Seeking in asf files fails (works with MPlayer)

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: asf seek
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

The sample from ticket #2639 refuses to seek with ffmpeg and ffplay, works fine with mplayer -demuxer asf

$ ffmpeg -ss 1 -i Thailand-Wave.wmv
ffmpeg version N-54102-gf8ca813 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jun 19 2013 00:00:03 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 37.101 / 52. 37.101
  libavcodec     55. 16.100 / 55. 16.100
  libavformat    55.  9.100 / 55.  9.100
  libavdevice    55.  2.100 / 55.  2.100
  libavfilter     3. 77.101 /  3. 77.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
[asf @ 0x1dfa020] max_analyze_duration 5000000 reached at 5200000 microseconds
[asf @ 0x1dfa020] asf_read_pts failed
    Last message repeated 2 times
[asf @ 0x1dfa020] freeing incomplete packet size 2106, new 971
[asf @ 0x1dfa020] asf_read_pts failed
[asf @ 0x1dfa020] freeing incomplete packet size 2994, new 3224
[asf @ 0x1dfa020] asf_read_pts failed
    Last message repeated 3 times
[asf @ 0x1dfa020] freeing incomplete packet size 1802, new 2044
[asf @ 0x1dfa020] asf_read_pts failed
[asf @ 0x1dfa020] freeing incomplete packet size 3036, new 2891
[asf @ 0x1dfa020] asf_read_pts failed
[asf @ 0x1dfa020] freeing incomplete packet size 3105, new 3227
[asf @ 0x1dfa020] asf_read_pts failed
    Last message repeated 1 times
[asf @ 0x1dfa020] ignoring invalid packet_obj_size (271 1164 1375 1497)
[asf @ 0x1dfa020] freeing incomplete packet size 1497, new 1375
[asf @ 0x1dfa020] freeing incomplete packet size 1375, new 1308
[asf @ 0x1dfa020] asf_read_pts failed
    Last message repeated 1 times
Thailand-Wave.wmv: could not seek to position 1.000
Guessed Channel Layout for  Input Stream #0.0 : mono
Input #0, asf, from 'Thailand-Wave.wmv':
  Metadata:
    SfOriginalFPS   : 250000
    WMFSDKVersion   : 8.20.00.5055
    WMFSDKNeeded    : 0.0.0.0000
    VBR Peak        : 480475
    Buffer Average  : 17325
    IsVBR           : 1
  Duration: 00:02:16.12, start: 0.000000, bitrate: 630 kb/s
    Stream #0:0: Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, mono, fltp, 20 kb/s
    Stream #0:1: Video: wmv2 (WMV2 / 0x32564D57), yuv420p, 320x240, 82 kb/s, 1k tbr, 1k tbn, 1k tbc
    Stream #0:2: Video: wmv2 (WMV2 / 0x32564D57), yuv420p, 320x240, 184 kb/s, 1k tbr, 1k tbn, 1k tbc
    Stream #0:3: Video: wmv2 (WMV2 / 0x32564D57), yuv420p, 320x240, 338 kb/s, 25 tbr, 1k tbn, 1k tbc
At least one output file must be specified

Change History (5)

comment:1 by compn, 11 years ago

Status: newopen

works with -f asf_o

seems to hang ffplay when seeking?

http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket2639/Thailand-Wave.wmv

Last edited 11 years ago by compn (previous) (diff)

in reply to:  1 comment:2 by Carl Eugen Hoyos, 11 years ago

Replying to compn:

works with -f asf_o

Please elaborate: How can I reproduce this?

seems to hang ffplay when seeking?

How can I reproduce this? Seeking in the file with ffplay works fine here and does not hang.

comment:3 by Elon Musk, 11 years ago

So this bug should be closed then.
Seeking and playing works fine with ffplay here.

comment:4 by Michael Niedermayer, 11 years ago

Reproduced by developer: set
Resolution: fixed
Status: openclosed

seeking with ffmpeg fixed in 838c5f3df7e98b15fd3acbcacaf315c32600ca45
seeking in ffplay worked before
this bug seems unrelated to asf or it was fixed longer ago ...

comment:5 by Carl Eugen Hoyos, 11 years ago

Keywords: seek added

This was apparently a duplicate of ticket #3671

Note: See TracTickets for help on using tickets.